Projects/Automation/infra/modules/vpc/main.tf
resource "aws_vpc" "this" {
  cidr_block = var.vpc_cidr

  tags = {
    Name = "procode-vpc"
  }
}
